GNOME Bugzilla – Bug 792062
backends/meta-remote-desktop-session.c:395: bad test ?
Last modified: 2018-01-24 04:18:26 UTC
backends/meta-remote-desktop-session.c:395:19: warning: logical 'or' of collectively exhaustive tests is always true [-Wlogical-op] Source code is if (steps != -1 || steps != 1) Maybe better code if (steps != -1 && steps != 1)
Indeed. Care to create a patch? You can do so by cloning the mutter repository using git, creating a commit, then uploading it here by using "git format-patch". Alternatively using git-bzr.
(In reply to Jonas Ådahl from comment #1) > Care to create a patch? No thanks. I just find them, I don't fix them. Someone more familiar with the project would be better placed to create a patch.
(In reply to dcb from comment #2) > (In reply to Jonas Ådahl from comment #1) > > Care to create a patch? > > No thanks. I just find them, I don't fix them. > > Someone more familiar with the project would be better placed to create a > patch. Fair enough. Thanks for the find!
(In reply to Jonas Ådahl from comment #3) > Fair enough. Thanks for the find! You are welcome. It might be a good idea to add compiler flag -Wlogical-op to your gcc builds to make sure this kind of error doesn't occur again in the future.